Изменения списка на сетку, так же добовление возможности просмотра и удаления информации, и не полностью доделаная возможность редактирвания

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   sqflite: any
   cached_network_image: any
   intl: any
+  path: any
+
 
 
   # The following adds the Cupertino Icons font to your application.
